uidir = $(pkgdatadir)/ui

ui_DATA =				\
	adapters.ui			\
	adapters-tab.ui		\
	applet-passkey.ui	\
	manager-main.ui		\
	services.ui	\
	device-list-widget.ui	\
	services-network.ui \
	services-transfer.ui	\
	send-dialog.ui		\
	assistant.ui		\
	applet-plugins-widget.ui \
	gsm-settings.ui		\
	net-usage.ui		\
	rename-device.ui

EXTRA_DIST = $(ui_DATA)
