uidir = $(pkgdatadir)/ui

ui_DATA =				\
	adapters-tab.ui		\
	applet-passkey.ui	\
	manager-main.ui		\
	services-network.ui \
	services-transfer.ui	\
	send-dialog.ui		\
	sendto-device-dialog.ui \
	sendto-rowbox.ui    \
	applet-plugins-widget.ui \
	gsm-settings.ui		\
	net-usage.ui		\
	note.ui				\
	rename-device.ui	\
	services-window.ui

EXTRA_DIST = $(ui_DATA)
