bluemandir = $(pythondir)/blueman/bluez/obex
blueman_PYTHON = 	\
	Agent.py	\
	AgentManager.py	\
	Base.py		\
	Client.py	\
	Error.py	\
	Manager.py	\
	ObjectPush.py	\
	Session.py	\
	Transfer.py	\
	__init__.py

CLEANFILES =		\
	$(BUILT_SOURCES)
	
DISTCLEANFILES = \
	$(CLEANFILES) 

clean-local:
	rm -rf *.pyc *.pyo 
