bluemandir = $(pythondir)/blueman/gui/manager
blueman_PYTHON = 			\
	ManagerDeviceList.py	\
	ManagerDeviceMenu.py	\
	ManagerMenu.py			\
	ManagerProgressbar.py	\
	ManagerStats.py			\
	ManagerToolbar.py		\
	__init__.py

CLEANFILES =		\
	$(BUILT_SOURCES)
	
DISTCLEANFILES = \
	$(CLEANFILES) 

clean-local:
	rm -rf *.pyc *.pyo 

